fix: backend, add:mail sender, add:cache-redis,add:transaction feature

--- a/.env
+++ b/.env
@@ -7,3 +7,12 @@ POSTGRES_HOST="localhost"
 POSTGRES_PASSWORD=tryonemore34
 POSTGRES_DATABASE="top_upgame_db"
 POSTGRES_PORT="5432"
+
+
+
+MAIL_SYSTEM=yosrygaming@gmail.com
+MAIL_PASS=kmhv ssuz vsdd ujob
+
+REDIS_PASS=m0GHB4jMJRHdXvuVVSThEsmJS7Q4K4eD
+REDIS_HOST=redis-13859.c44.us-east-1-2.ec2.redns.redis-cloud.com
+REDIS_PORT=13859
