update:change db to mongodb

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 PORT=3005
-# MONGODB_URI=mongodb+srv://stuffofyos1516:pY5c6MRkuAdGVFFB@topupgamecluster.y9bxve3.mongodb.net/
+MONGODB_URI=mongodb+srv://vrenxyy001:98KzEy9zzfUStBlG@cluster0.hxlrpcg.mongodb.net/top_up
 
-
-POSTGRES_USER="postgres"
-POSTGRES_HOST="localhost"
-POSTGRES_PASSWORD=tryonemore34
-POSTGRES_DATABASE="top_upgame_db"
-POSTGRES_PORT="5432"
-
-
+POSTGRES_URL="postgres://default:PX73pSmbYLrA@ep-frosty-fog-a4yciup0-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:PX73pSmbYLrA@ep-frosty-fog-a4yciup0-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:PX73pSmbYLrA@ep-frosty-fog-a4yciup0-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:PX73pSmbYLrA@ep-frosty-fog-a4yciup0.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-frosty-fog-a4yciup0-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="PX73pSmbYLrA"
+POSTGRES_DATABASE="verceldb"
 
 MAIL_SYSTEM=yosrygaming@gmail.com
-MAIL_PASS=kmhv ssuz vsdd ujob
+MAIL_PASS="kmhv ssuz vsdd ujob"
 
 REDIS_PASS=m0GHB4jMJRHdXvuVVSThEsmJS7Q4K4eD
 REDIS_HOST=redis-13859.c44.us-east-1-2.ec2.redns.redis-cloud.com
