--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3005
-MONGODB_URI=mongodb+srv://vrenxyy001:98KzEy9zzfUStBlG@cluster0.hxlrpcg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://vrenxyy001:98KzEy9zzfUStBlG@cluster0.hxlrpcg.mongodb.net/top_up
 
-# mongodb+srv://vrenxyy001:98KzEy9zzfUStBlG@cluster0.hxlrpcg.mongodb.net/top_up
+
 MAIL_SYSTEM=yosrygaming@gmail.com
 MAIL_PASS="kmhv ssuz vsdd ujob"
 
